Removed console logs. Fixed root layout bug.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,3 @@
-.container {
-  min-width: 100vw;
-}
-
 .main {
   display: flex;
   flex-direction: column;
