--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -14,6 +14,12 @@
   overflow: auto;
   white-space: nowrap;
   color: var(--primary-color);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.footer::-webkit-scrollbar {
+  display: none;
 }
 
 .footerInner {
